make sure dataTable footer message is aligned with widget title and no data message in dashboard

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -195,6 +195,10 @@ div.dataTable, div.dataTable > .dataTableWrapper {
   margin: 10px;
 }
 
+.widget .datatableFooterMessage {
+  margin-left: 15px;
+}
+
 .dataTablePages {
   color: #BFBFBF;
   font-weight: bold;
